# agroGraf_MVP

./: README.md  app.py  requirements.txt
cloud/: bitdog_pico_microPython.py  main.py  vertex_predict.py
components/: navbar.py  sidebar.py
pages/: alarmes.py  configuracoes.py  dashboard.py  identificacao.py  relatorios.py  simulador.py
sensor_firmware/: CMakeLists.txt  agrograf.c  ws2818b.pio
services/: bitdog_data.py
